--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"qr-code-styling": "^1.9.2",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-pageflip": "^2.0.3",
 		"sass": "^1.83.4",
 		"uuid": "^11.0.5",
 		"vite-plugin-svgr": "^4.3.0"
